css of header updated

--- a/assets/css/style_new.css
+++ b/assets/css/style_new.css
@@ -110,3 +110,40 @@ body {
 .night_mode:hover {
     cursor: pointer;
 }
+
+.topnav {
+    text-align: center;
+    position: relative;
+    max-width: 100%;
+    padding: 10px 60px;
+    vertical-align: baseline;
+    background-color:  rgb(66, 110, 255);
+}
+
+.topnav h2 {
+    text-align: center;
+    color: #f2f2f2;
+    text-decoration: none;
+    font-size: 17px;
+}
+.button {
+    border: none;
+    border-radius: 3px;
+    color:  rgb(66, 110, 255);
+    display: inline-block;
+    font-size: 16px;
+    margin: .2em .5em;
+    padding: 6px 10px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    background-color:  rgb(66, 110, 255); 
+}
+.button1 {
+    background-color:  rgb(66, 110, 255); 
+    color: black; 
+    border: 2px solid white;
+}
+.button1:hover {
+    background-color: white;
+    color: rgb(66, 110, 255);
+}
